# finalto

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
config/: __init__.py  config.example.ini  settings.py
src/: __init__.py  fix_client.py  logger_setup.py  main.py  trade_executor.py  utils.py
tests/: __init__.py  test_fix_client.py  test_settings.py  test_trade_executor.py
